--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -1,6 +1,11 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+     RewriteEngine On
+        #RewriteCond %{REQUEST_FILENAME} !-d
+        #RewriteCond %{REQUEST_FILENAME} !-f
+        #RewriteRule ^ index.php [L]
+
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_URI} !^/(app/webroot/)?(img|css|js|fonts)/(.*)$
+        RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
